--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,17 @@
 			<artifactId>json</artifactId>
 			<version>20220924</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.jena</groupId>
+			<artifactId>apache-jena-libs</artifactId>
+			<version>4.5.0</version>
+			<type>pom</type>
+		</dependency>
 	</dependencies>
 
 	<build>
